fix(styles): fix horizontal align for comm pref mozilla/fxa-content-server#4098) r=vladikoff
Fixes mozilla/fxa-content-server#3886

--- a/packages/fxa-content-server/app/styles/modules/_settings.scss
+++ b/packages/fxa-content-server/app/styles/modules/_settings.scss
@@ -179,15 +179,20 @@ body.settings #main-content.card {
 
       html[dir='ltr'] & {
         float: right;
+
+        &.unpaired {
+          float: none;
+        }
       }
 
       html[dir='rtl'] & {
         float: left;
+
+        &.unpaired {
+          float: none;
+        }
       }
 
-      &.unpaired {
-        float: none;
-      }
     }
   }
 
